<resources>
    <string name="app_name">10119033 - Dandi Ahmadin</string>
    <string name="splash_screen_title">Nearest Foods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_profile">Profile</string>
    <string name="maps">Maps</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="profile_name">Dandi Ahmadin</string>
    <string name="profile_nim">10119033</string>
    <string name="profile_class">IF-1</string>
    <string name="profile_email">ahmadin.dandi14@gmail.com</string>
    <string name="about_title">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_message">Aplikasi ini untuk memenuhi salah satu tugas mata kuliah Aplikasi Komputasi Bergerak dengan Dosen Alif Finandhita, S.Kom., M.T</string>
    <string name="about_body">Aplikasi Nearest Foods merupakan aplikasi yang memanfaatkan sensor lokasi pada device dan layanan google map untuk mengetahui lokasi saat ini serta dapat menandai suatu tempat berdasarkan koordinat latitude dan longitude yang telah ditentukan.</string>
    <string name="foods">Foods</string>
    <string name="my_location">My Location</string>
</resources>