<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.viewpager2.SecondaryFragment"
    android:orientation="vertical"
    android:background="@color/danger"
    android:padding="16dp">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_location_on_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_title"
        android:textSize="32sp"
        android:textColor="@color/light"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_version"
        android:textColor="@color/light"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_message"
        android:textColor="@color/light"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_body"
        android:textColor="@color/light"
        android:textSize="18sp"
        android:textAlignment="center" />


</LinearLayout>